LDEV-4079: updating news.html for LAMS 3 release (draft1)

--- a/lams_www/web/news.html
+++ b/lams_www/web/news.html
@@ -1,44 +1,45 @@
-<h1>Welcome to LAMS 2.4!</h1>
-<h2>
-  New features for teachers:</h2>
+<style type="text/css">
+.liner {
+font-size: initial;
+margin-bottom: 15px;
+}
+</style>
+<h1 style="margin-top: 0px;margin-bottom:10px;">Welcome to LAMS 3.0 Demo!</h1>
+
 <div>
-  &nbsp;
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Conditional+lesson+release" target="_new" title="Conditional lesson release">Conditional lesson release</a></h4>
-  <p>
-    Specify if another previous lesson must be completed before a lesson becomes available to learners.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Notifications" target="_new" title="Notifications">Scheduled and instant notifications</a></h4>
-  <p>
-    A very powerful new feature that enhance LAMS tracking and communication capabilities.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Date+Restrictions" target="_new" title="Date Restrictions">Date restrictions for lessons</a></h4>
-  <p>
-    Specify restrictions to finish lessons by certain deadlines.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Mobile+devices+support+for+learners" target="_new" title="Mobile devices support for learners">Mobile devices support for learners</a></h4>
-  <p>
-    When using mobile devices LAMS displays an alternative mobile friendly UI for learners.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Lesson+introductions" target="_new" title="Lesson introductions">Lesson introductions</a></h4>
-  <p>
-    Create an introductory page for lessons and include an image of the design.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/pages/viewpage.action?pageId=31588429" target="_new">Ratings for Q&amp;A and Forum</a></h4>
-  <p>
-    Learners can now rate each other answers and postings.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Date+restrictions+on+activities" target="_new">Set deadlines for activities</a></h4>
-  <p>
-    For each activity teachers can specify a date for completion. Past this deadline, learners cannot longer view or participate in the activity.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Assessment+question+bank" target="_new">Assessment now implements question pools</a></h4>
-  <p>
-    Teachers can export and import their questions into any assessment activity and specifically select which questions to be used.</p>
-  <h4>
-    <a href="http://wiki.lamsfoundation.org/display/lams/Faster+Gradebook+excel+exports" target="_new">Faster Gradebook excel exports</a></h4>
-  <p>
-    Download gradebooks into excel for an entire course or specifically for a subgroup.</p>
-  <div>
-    Four new tools, 400+ improvements and a <a href="http://wiki.lamsfoundation.org/display/lams/LAMS+2.4+Feature+list" target="_new">lot more...</a></div>
+<h3>New features:</h3>
+
+<div>
+<h4 style="color:#337ab7" class="voffset10">Modern look and responsive design</h4>
+
+<p class="liner">A completely new look and feel with a mobile/tablet friendly design.</p>
+
+<h4 style="color:#337ab7">Flashless Monitor, Learner and Author!</h4>
+
+<p class="liner">Replace Flash with a completely new HTML5 interface making LAMS a <em>lot faster</em> and easier to use on any device.</p>
+
+<h4 style="color:#337ab7">IMS LTI integrations</h4>
+
+<p class="liner">LAMS is now an IMS LTI tool provider and consumer, allowing LAMS to be integrated with <em>any</em> Learning Management System that support IMS LTI!</p>
+
+<h4 style="color:#337ab7">Embed rich media, images, videos directly into any HTML editor</h4>
+
+<p class="liner">If you use external content in your teaching, now LAMS makes it easier to embed content from websites like Youtube, TED, Wikipedia, Flickr, Vimeo, Twitter, Instagram, Pintrest, Facebook, Prezi, GitHub, and many more!</p>
+
+<h4 style="color:#337ab7">New Peer Review tool</h4>
+
+<p class="liner">Probably the most versatile Peer and Self Review tool you will find. Allow students to rate, rank and/or comments on their own and others work/performance.</p>
+
+<h4 style="color:#337ab7">Performance improvements</h4>
+
+<p class="liner">Now LAMS feels a lot faster responsive. Whether you are running a class with 10 or 10 thousand students!</p>
+
+<h4 style="color:#337ab7">Complete technology overhaul</h4>
+
+<p class="liner">The entire LAMS technical stack has been upgraded for LAMS 3.0!</p>
+
+<p class="liner">Over <strong>600+ improvements</strong> and a <a href="https://wiki.lamsfoundation.org/display/lams/LAMS+3.0+Feature+List" target="_blank">lot more...</a></p>
+
+<div>&nbsp;</div>
 </div>
+
