LDEV-4079: updating news.html for LAMS 3 release (draft2)

--- a/lams_www/web/news.html
+++ b/lams_www/web/news.html
@@ -4,7 +4,7 @@ font-size: initial;
 margin-bottom: 15px;
 }
 </style>
-<h1 style="margin-top: 0px;margin-bottom:10px;">Welcome to LAMS 3.0 Demo!</h1>
+<h1 style="margin-top: 0px;margin-bottom:10px;">Welcome to LAMS 3.0!</h1>
 
 <div>
 <h3>New features:</h3>
