LDEV-4510: change groups to teams

--- a/lams_www/web/public/ld-templates/tbl/tblintro.html
+++ b/lams_www/web/public/ld-templates/tbl/tblintro.html
@@ -3,7 +3,7 @@ As a post-class activity, your students would complete a personal reflection on 
 <p>The Peer Review activity will only be included if you enter values in the Peer Review Criteria fields on the following pages. If you leave the fields blank then the learners will skip the Peer Review stage.</p>
 <p>Students would go through the following activities.</p>
 <p>Step 1: Introducing TBL to the students<BR/>
-Step 2: Forming groups<BR/>
+Step 2: Forming teams<BR/>
 Step 3: Completing the Individual Readiness Assessment (iRA)<BR/>
 Step 4: Completing the Team Readiness Assessment (tRA)<BR/>
 Step 5: Completing the Application Exercises<BR/>
